<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_details_item_sku"
                style="@style/PrimaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_details_item_description"
                style="@style/PrimaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_tag_number"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tag_number" />

            <TextView
                android:id="@+id/location_details_tag_number"
                style="@style/PrimaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_pack_size"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pack_size" />

            <TextView
                android:id="@+id/location_details_pack_size"
                style="@style/PrimaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_received_date"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_received_date" />

            <TextView
                android:id="@+id/location_details_received_date"
                style="@style/PrimaryTextStyle"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_expiration_date"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_expiration_date" />

            <TextView
                android:id="@+id/location_details_expiration_date"
                style="@style/PrimaryTextStyle"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_case_qty"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_case_qty" />

            <TextView
                android:id="@+id/location_details_cases_qty"
                style="@style/PrimaryTextStyle"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/dividerColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/location_details_button_adjust"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/adjust_28"
                android:includeFontPadding="true"
                android:text="@string/module_adjustment"
                android:textSize="12sp" />

            <Button
                android:id="@+id/location_details_button_move"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/move_28"
                android:includeFontPadding="true"
                android:text="@string/module_move"
                android:textSize="12sp" />
            <!--
            <Button
                android:id="@+id/location_details_button_stage"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/pick_28"
                android:includeFontPadding="true"
                android:text="@string/module_pick"
                android:textSize="12sp" />
            -->
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>