<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/block_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/input_item_sku"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_item_selected"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/input_item_description"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_pack_size"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pack_size" />

            <TextView
                android:layout_marginStart="8dp"
                android:id="@+id/input_pack_size"
                style="@style/PrimaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textStyle="italic" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_tag_number"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tag #: " />

            <TextView
                android:id="@+id/input_tag_number"
                style="@style/PrimaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_received_date"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Received Date: " />

            <TextView
                android:id="@+id/input_received_date"
                style="@style/PrimaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_expiration_date"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expiration Date: " />

            <TextView
                android:id="@+id/input_expiration_date"
                style="@style/PrimaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"/>

        </LinearLayout>
    </LinearLayout>
    <!-- SCAN ITEM -->
    <LinearLayout
        android:id="@+id/scan_item"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.15"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="8dp"
        android:paddingStart="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/barcode_scanner_24" />
    </LinearLayout>
</LinearLayout>